--- a/assets/stylesheets/home.css
+++ b/assets/stylesheets/home.css
@@ -19,7 +19,7 @@ Primary Header
 .logo {
 	border-top: 4px solid #3A90DB;
 	padding: 40px 0 22px 0;
-	float:left;
+	float:middle;
 	font-size: 48px;
 	line-height: 44px;
 }
@@ -51,6 +51,10 @@ Grid
 }
 .col-3-5{
 	width: 55%;
+}
+.col-1-5, .col-3-5{
+	padding-top: 30px;
+	text-align: center;
 }
 .col-1-3, .col-2-3, .col-1-2, .col-1-5, .col-3-5{
 	display: inline-block;
@@ -141,3 +145,9 @@ cite, em {
 	border-bottom-style: solid;
 	border-bottom-width: thin;
 }
+.tracks{
+	list-style-type:none;
+	text-align:left;
+	font-size:11;
+}
+
