--- a/assets/stylesheets/home.css
+++ b/assets/stylesheets/home.css
@@ -59,6 +59,7 @@ Grid
 .col-1-3, .col-2-3, .col-1-2, .col-1-5, .col-3-5{
 	display: inline-block;
 	vertical-align: top;
+	min-width: 350px;
 }
 .grid, .col-1-3, .col-2-3, .col-1-2, .col-1-5, .col-3-5{
 	padding-left:15px;
@@ -67,7 +68,7 @@ Grid
 }
 .container, .grid {
   margin: 0 auto;
-  min-width: 960px;
+  min-width: 800px;
 }
 .container {
   padding-left: 30px;
@@ -114,25 +115,31 @@ cite, em {
 .row,
 .row-alt{
 	min-width: 960px;
-}
-.row {
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e5e5e5+100;White+3D */
 	background: #ffffff; /* Old browsers */
 	background: -moz-linear-gradient(45deg,  #ffffff 0%, #e5e5e5 100%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(45deg,  #ffffff 0%,#e5e5e5 100%); /* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(45deg,  #ffffff 0%,#e5e5e5 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-
-	min-width: 960px;
+}
+.row {
+	min-width: 800px;
 	box-shadow: 0px 0px 10px 0px #000;
 	padding-bottom: 10px;
 }
 .row-alt {
-   background: #cbe2c1;
-   background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
-   background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
-   background: linear-gradient(to right, #a1d3b0, #f6f1d3);
-   padding: 44px 0 22px 0;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e5e5e5+100;White+3D */
+	background: #ffffff; /* Old browsers */
+	background: -moz-linear-gradient(45deg,  #ffffff 0%, #e5e5e5 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(45deg,  #ffffff 0%,#e5e5e5 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(45deg,  #ffffff 0%,#e5e5e5 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+	
+	min-width: 800px;
+	max-width: 60%;
+	box-shadow: 0px 0px 10px 0px #000;
+	padding-bottom: 10px;
+	margin:auto;
  }
 .scroll{
 	border-style: solid;
