--- a/assets/stylesheets/home.css
+++ b/assets/stylesheets/home.css
@@ -4,9 +4,13 @@ Primary Header
 .logo {
 	border-top: 4px solid #3A90DB;
 	padding: 40px 0 22px 0;
-	float:middle;
 	font-size: 48px;
 	line-height: 44px;
+	text-align: center;
+	margin-left: auto;
+	margin-right:auto;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 /*
@@ -26,9 +30,9 @@ h1, h2, h3, h4 {
 }
 h1 {
   font-size: 36px;
-  line-height: 44px;
-  text-align: center;
   color: #fff;
+  max-width: 50%;
+  text-align: center;
 }
 h2 {
   font-size: 24px;
@@ -43,7 +47,10 @@ body {
 	background: -webkit-linear-gradient(45deg,  #233141 0%,#233141 100%); /* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(45deg,  #233141 0%,#233141 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#233141', endColorstr='#233141',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-
+	margin: auto;
+	display:block;
+	text-align: center;
+	padding: 30px;
 
 }
 strong {
@@ -53,7 +60,7 @@ cite, em {
   font-style: italic;
 }
 
-.card, .card-left, .card-right {
+.card{
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
@@ -66,13 +73,18 @@ cite, em {
 	background: linear-gradient(45deg,  #ffffff 0%,#e5e5e5 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 	
-	min-width: 30%;
-	max-width: 45%;
+	min-width: 40%;
+	max-width: 40%;
 	padding: 10px;
 	margin:10px;
 	
-	float:left;
-	overflow:hidden;
+	display: inline-block;
+	
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	vertical-align: top;
 }
 
 /* On mouse-over, add a deeper shadow */
@@ -84,4 +96,3 @@ cite, em {
 .container {
     padding: 2px 16px;
 }
-
